--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -212,9 +212,9 @@
    <widget class="QPushButton" name="loadImage">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>420</x>
       <y>10</y>
-      <width>341</width>
+      <width>361</width>
       <height>41</height>
      </rect>
     </property>
@@ -317,7 +317,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>60</y>
+      <y>120</y>
       <width>341</width>
       <height>31</height>
      </rect>
@@ -334,6 +334,37 @@
     </property>
     <property name="text">
      <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>320</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Time of last operation</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>60</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Current algoritm</string>
     </property>
    </widget>
   </widget>
