--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>798</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -183,7 +183,7 @@
      <string>PushButton</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_10">
+   <widget class="QPushButton" name="jpegCompression">
     <property name="geometry">
      <rect>
       <x>540</x>
@@ -193,7 +193,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>JPEG Compression</string>
     </property>
    </widget>
    <widget class="QLabel" name="imageWrap">
@@ -202,7 +202,7 @@
       <x>20</x>
       <y>140</y>
       <width>491</width>
-      <height>401</height>
+      <height>301</height>
      </rect>
     </property>
     <property name="text">
@@ -317,7 +317,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>120</y>
+      <y>90</y>
       <width>341</width>
       <height>31</height>
      </rect>
@@ -349,7 +349,7 @@
      <string>Time of last operation</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="currentAlgorithm">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -365,6 +365,58 @@
     </property>
     <property name="text">
      <string>Current algoritm</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="ImageProcessedWrap">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>450</y>
+      <width>491</width>
+      <height>291</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="decodedSignature">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>90</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="duration">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>320</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_10">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>260</y>
+      <width>231</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Decode</string>
     </property>
    </widget>
   </widget>
