--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -322,6 +322,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="text">
+     <string>default</string>
+    </property>
    </widget>
    <widget class="QLabel" name="IF">
     <property name="geometry">
